// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findNeededTokens returns correct tokens with exposed tokens, with variablesMap 1`] = `
Array [
  "borderalertradius",
  "borderfieldwidth",
  "colorbackgroundbuttonnormalactive",
  "colorbackgroundbuttonnormaldefault",
  "colorbackgroundbuttonnormaldisabled",
  "colorbackgroundbuttonnormalhover",
  "colorbackgroundcontainercontent",
  "colorbackgroundstatuserror",
  "colorbackgroundstatusinfo",
  "colorbackgroundstatussuccess",
  "colorbackgroundstatuswarning",
  "colorborderbuttonnormalactive",
  "colorborderbuttonnormaldefault",
  "colorborderbuttonnormaldisabled",
  "colorborderbuttonnormalhover",
  "colorborderstatuserror",
  "colorborderstatusinfo",
  "colorborderstatussuccess",
  "colorborderstatuswarning",
  "colortextbuttonnormalactive",
  "colortextbuttonnormaldefault",
  "colortextbuttonnormalhover",
  "colortextinteractivedisabled",
  "colortextstatuserror",
  "colortextstatusinfo",
  "colortextstatussuccess",
  "colortextstatuswarning",
  "spacealertactionleft",
  "spacealerthorizontal",
  "spacealertmessageright",
  "spacealertvertical",
  "spaces",
  "spacescaledxxs",
  "spacexxs",
  "additionalExposed",
]
`;

exports[`findNeededTokens returns correct tokens without exposed tokens, with variablesMap 1`] = `
Array [
  "borderalertradius",
  "borderfieldwidth",
  "colorbackgroundbuttonnormalactive",
  "colorbackgroundbuttonnormaldefault",
  "colorbackgroundbuttonnormaldisabled",
  "colorbackgroundbuttonnormalhover",
  "colorbackgroundcontainercontent",
  "colorbackgroundstatuserror",
  "colorbackgroundstatusinfo",
  "colorbackgroundstatussuccess",
  "colorbackgroundstatuswarning",
  "colorborderbuttonnormalactive",
  "colorborderbuttonnormaldefault",
  "colorborderbuttonnormaldisabled",
  "colorborderbuttonnormalhover",
  "colorborderstatuserror",
  "colorborderstatusinfo",
  "colorborderstatussuccess",
  "colorborderstatuswarning",
  "colortextbuttonnormalactive",
  "colortextbuttonnormaldefault",
  "colortextbuttonnormalhover",
  "colortextinteractivedisabled",
  "colortextstatuserror",
  "colortextstatusinfo",
  "colortextstatussuccess",
  "colortextstatuswarning",
  "spacealertactionleft",
  "spacealerthorizontal",
  "spacealertmessageright",
  "spacealertvertical",
  "spaces",
  "spacescaledxxs",
  "spacexxs",
]
`;
